feat: 스웨거 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+# Swagger UI ?? ?? ??
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.display-request-duration=true
+
+# OpenAPI ?? ?? ??
+springdoc.api-docs.path=/v3/api-docs
+
 jwt.secret.key=${JWT_SECRET_KEY}
